fix broken CSS

--- a/src/components/userProfile/components/styles.css
+++ b/src/components/userProfile/components/styles.css
@@ -60,7 +60,7 @@
 .menu {
     height: 100%;
     min-height: 550px;
-    padding-top: 50px;
+    padding-top: 57px;
 }
 .sm-content {
     padding: 0 14px;
